--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ authors = [
     { name = "Dashiell Stander", email = "dash.stander@gmail.com" }
 ]
 dependencies = [
-    "torch>=2.0",
+    "torch>=2.2.1",
+    "numpy>=1.26.4",
+    "scipy>=1.12.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
@@ -20,7 +22,9 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = []
+dev-dependencies = [
+    "ruff>=0.2.2",
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
