Jupyter for development
Signed-off-by: Dashiell Stander <dstander@protonmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ build-backend = "hatchling.build"
 managed = true
 dev-dependencies = [
     "ruff>=0.2.2",
+    "ipykernel>=6.29.3",
+    "jupyterlab>=4.1.2",
 ]
 
 [tool.hatch.metadata]
