--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "torch>=2.2.1",
     "numpy>=1.26.4",
     "scipy>=1.12.0",
+    "optree>=0.10.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
